# queue_and_threads

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: queue_element.hpp  queue_lifo.hpp
source/: main.cpp  queue_element.cpp  queue_lifo.cpp
